[tool.poetry]
name = "weather web scraping"
version = "0.1.0"
description = ""
authors = ["LilM4Ki <renanmakiya@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
schedule = "^1.2.2"
openpyxl = "^3.1.5"
selenium = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
